@@ -2,6 +2,9 @@ ver 0.4.4
 - Supported UE4.0 ~ 4.9.
 - Added "Skip non-texture assets" option.
 - Fixed an error when loading assets that have multiple textures.
+- Improved check mode (removed uneccessary versions from the check list)
+- Removed parse errors for unsupported pixel formats
+- Refined codes
 
 ver 0.4.3
 - Supported UE4.10 ~ 4.12
